Fixed overflow on small screens

--- a/style.css
+++ b/style.css
@@ -5,9 +5,10 @@
 body {
 	width: 24em;
 	max-width: 85%;
+	max-height: 100%;
 	margin: auto;
 	color: #E3CF9E;
-	position: fixed;
+	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
